[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mace-mp-umap"
version = "0.1"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Rokas Elijošius", email = "re344@cam.ac.uk" }]
dependencies = [
    "umap-learn",
    "typer[all]>=0.9.0",
    "mendeleev",
    "chemiscope"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mace_mp_umap"]
namespaces = false

[project.scripts]
mace_mp_umap_analysis = "mace_mp_umap.cli:app"
